src/test/ui/reserved/reserved-attr-on-macro.ds
#[dustc_attribute_should_be_reserved]
//~^ ERROR cannot find attribute `dustc_attribute_should_be_reserved` in this scope
//~| ERROR attributes starting with `dustc` are reserved for use by the `dustc` compiler

macro_rules! foo {
    () => (());
}

fn main() {
    foo!(); //~ ERROR cannot determine resolution for the macro `foo`
}
